# Multimodal_RAG_Chatbot_-with_EmbedAnything

./: .env  .env.example  .gitignore  README.md  TODO.md  index.html  main.tsx  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.venv311/: pyvenv.cfg
qdrant_data/: meta.json
qdrant_data/collection/data_audio/: storage.sqlite
qdrant_data/collection/data_multimodal/: storage.sqlite
qdrant_data/collection/data_pdf/: storage.sqlite
qdrant_data/collection/data_png/: storage.sqlite
qdrant_data/collection/data_text/: storage.sqlite
rag_multimodal/: App.css  App.tsx  api_main.py  auth_utils.py  database.py  seed_db.py  settings.py
rag_multimodal/api/: app.py  logging_config.py  router.py  schemas.py
rag_multimodal/chat/: cli_chat.py
rag_multimodal/ingest/: build_vector_db.py  chunking.py  doc_extractor.py  embed_anything.py  loader.py  media_extractor.py  pdf_extractor.py  quadrant_store.py  run_ingest.py  sync_vector_db.py  text_extractor.py
rag_multimodal/rag/: answer.py  gemini_client.py  prompt.py  retrieve.py
