[tool.poetry]
name = "rag_multimodal"
version = "0.1.0"
description = "Multi-modal RAG chatbot using EmbedAnything + Gemini + Quadrant"
author = [" Gul Hameed Khan"]
readme = "README.md"
packages = [{ include = "rag_multimodal" }]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"
pypdf = "^4.2.0"
Pillow = "^10.4.0"
requests = "^2.32.3"

# The actual package names/import paths for EmbedAnything and Quadrant may differ;
# use the pip package name for Poetry's dependency resolution.
embed-anything = "0.6.6"
google-generativeai = "^0.7.2"
qdrant-client = "*"
python-docx = "^1.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
